--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,7 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+/* Option 2: Import via CSS */
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 [x-cloak] {
     display: none;
+}
+
+.items-col{
+    @apply flex items-center justify-center flex-col gap-4
+}
+
+.bg-primary{
+    @apply bg-[#ffe85c]
 }
